Update ProShieldCommand.java